--- a/dubbo_service2/pom.xml
+++ b/dubbo_service2/pom.xml
@@ -3,15 +3,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.dubbo</groupId>
-        <artifactId>duboo</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.3.4.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.dubbo.dubbo_service</groupId>
-    <artifactId>dubbo_service</artifactId>
+    <groupId>com.dubbo</groupId>
+    <artifactId>dubbo_service2</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>dubbo_service</name>
+    <name>dubbo_service2</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -72,12 +72,19 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>com.alibaba.spring.boot</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+            <version>2.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>com.dubbo.dubbo_consumer</groupId>
             <artifactId>dubbo_consumer</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
