--- a/dubbo_service3/pom.xml
+++ b/dubbo_service3/pom.xml
@@ -24,15 +24,9 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.curator</groupId>
-            <artifactId>curator-framework</artifactId>
-            <version>2.12.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>dubbo</artifactId>
-            <version>2.6.2</version>
-            <scope>compile</scope>
+            <groupId>com.dubbo_api</groupId>
+            <artifactId>dubbo_api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.101tec/zkclient -->
         <dependency>
