--- a/dubbo_common/pom.xml
+++ b/dubbo_common/pom.xml
@@ -3,15 +3,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.dubbo</groupId>
-        <artifactId>duboo</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.3.4.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.dubbo_api</groupId>
-    <artifactId>dubbo_api</artifactId>
+    <groupId>com.dubbo_common</groupId>
+    <artifactId>dubbo_common</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>dubbo_api</name>
+    <name>dubbo_common</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -47,6 +47,11 @@
             <artifactId>dubbo-spring-boot-starter</artifactId>
             <version>2.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
