--- a/dubbo_service/pom.xml
+++ b/dubbo_service/pom.xml
@@ -57,8 +57,8 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>com.dubbo.dubbo_consumer</groupId>
-            <artifactId>dubbo_consumer</artifactId>
+            <groupId>com.dubbo_common</groupId>
+            <artifactId>dubbo_common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
